Imporved spacing on mobile and fixed background

--- a/components/PostList/postList.module.scss
+++ b/components/PostList/postList.module.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'breakpoints';
 
 .postList {
   list-style: none;
@@ -23,5 +24,11 @@
 
   & p {
     line-height: 1.6;
+  }
+
+  @include breakpoint-mobile {
+    &__post {
+      padding: $size-5;
+    }
   }
 }
