--- a/pages/about.module.scss
+++ b/pages/about.module.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'breakpoints';
 
 .about {
   p {
@@ -16,10 +17,10 @@
 
   &__image {
     text-align: center;
-    background-color: $dark-blue-1;
 
     img {
       border-radius: 5px;
+      background-color: $dark-blue-1;
     }
   }
 
@@ -30,7 +31,7 @@
     row-gap: $size-5;
   }
 
-  @media (max-width: 767px) {
+  @include breakpoint-mobile {
     &__me,
     &__questions {
       grid-template-columns: 1fr;
